415826 modules initialised with --module-start-ini and --module-startd-ini

--- a/jetty-distribution/pom.xml
+++ b/jetty-distribution/pom.xml
@@ -474,7 +474,7 @@
 		<argument>jetty.home=${assembly-directory}</argument>
 		<argument>jetty.base=${assembly-directory}</argument>
 		<argument>--module-start-ini=server,deploy,websocket,jsp,ext,resources</argument>
-		<argument>--module-ini=http</argument>
+		<argument>--module-startd-ini=http</argument>
 	      </arguments>
 	    </configuration>
             <goals>
@@ -489,7 +489,7 @@
 	      <arguments>
 		<argument>jetty.home=${assembly-directory}</argument>
 		<argument>jetty.base=${assembly-directory}/demo-base</argument>
-		<argument>--module-ini=http,https</argument>
+		<argument>--module-startd-ini=http,https</argument>
 	      </arguments>
 	    </configuration>
             <goals>
